* added synergies: blizzard, thunder dash, poisoned weapons
* added new unique items
* disabled my workaround that allowed dimension deletition because it caused server crashes. But now dimensions won't be deleted until forge accepts a PR
* converted all my registry ids to same rules minecraft uses, which means no spaces and all lowercase., this might break some stats on old items, sorry! 
I added a temporary system that auto formats all old names to this standard, but it's not perfect and some might not work. Ignore errors about unknown registries.
* decreased item requirements a bit
* fix runewords
* only 1 unique rune per runed item is now allowed
* fix some heals not working
* runewords, affixes and sets are now fully moddable with datapacks! This might have some issues so i'll need some guniea pigs to test it! 
I tested it myself on client and server but it's not foolproof.

3.0.10
* buffed rarity drops default config (needs config reset)
* loot crates now dont spawn with low rarities
* added map info overlay. very simple percentages but should be enough.

3.0.9
* salvage station now stops working if there isn't at least 1 empty output slot
* fix regen not working if it's less than 1
* added a new crate type
* fixed mobs only spawning as epic or rare
* rarity kill requirements now scale exactly to configured rarity weight. So increasing mythic mob spawns in config will increase quest requirements for them too.

3.0.8
* fix group members having different quest requirement numbers
* map worlds now have no level restriction for legendary and mythic mobs
* altered quest time to scale with requirements
* quest req now scale with map tier
* map spawners now have chance to be random mob in maps, be careful!
* map death minute punishment now scales with map tier
* fixed stat bug that didnt allow them to go into minus. this will make maps a lot harder!
* fixed infinite map ticket bug
* fix map reward crate give method.

3.0.7
* attempting to fix teleport bugs