@@ -21,7 +21,6 @@ import com.robertx22.mine_and_slash.uncommon.interfaces.IGenerated;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Suffixes implements IRandomDefault<BaseAffix>, ISlashRegistryInit {
 
@@ -29,9 +28,9 @@ public class Suffixes implements IRandomDefault<BaseAffix>, ISlashRegistryInit {
 
     @Override
     public List<BaseAffix> All() {
-        return SlashRegistry.Affixes().getWrapped().ofAffixType(BaseAffix.Type.suffix).list.stream()
-                .map(x -> (BaseAffix) x)
-                .collect(Collectors.toList());
+        return SlashRegistry.Affixes()
+            .getWrapped()
+            .ofAffixType(BaseAffix.Type.suffix).list;
     }
 
     @Override
