@@ -2,12 +2,11 @@ package com.robertx22.mine_and_slash.items.gearitems.offhands;
 
 import com.mojang.blaze3d.matrix.MatrixStack;
 import com.mojang.blaze3d.vertex.IVertexBuilder;
-import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.IRenderTypeBuffer;
-import net.minecraft.client.renderer.RenderType;
+import net.minecraft.client.renderer.ItemRenderer;
 import net.minecraft.client.renderer.entity.model.ShieldModel;
 import net.minecraft.client.renderer.model.Material;
-import net.minecraft.client.renderer.model.ModelBakery;
+import net.minecraft.client.renderer.texture.AtlasTexture;
 import net.minecraft.client.renderer.tileentity.ItemStackTileEntityRenderer;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
@@ -24,7 +23,7 @@ public class ShieldRenderer extends ItemStackTileEntityRenderer implements Calla
     }
 
     @Override
-    public void render(ItemStack stack, MatrixStack mat, IRenderTypeBuffer renderType, int x, int y) {
+    public void render(ItemStack stack, MatrixStack mat, IRenderTypeBuffer renderType, int light, int overlayLight) {
         Item item = stack.getItem();
 
         if (item instanceof NormalShield) {
@@ -35,17 +34,16 @@ public class ShieldRenderer extends ItemStackTileEntityRenderer implements Calla
 
             mat.scale(1F, -0.6F, -1.0F);
 
-            Material material = ModelBakery.LOCATION_SHIELD_BASE;
+            Material material = new Material(AtlasTexture.LOCATION_BLOCKS_TEXTURE, shield.resource);
 
-            IVertexBuilder ivertexbuilder = material.getBuffer(renderType, RenderType::entityNoOutline);
+            IVertexBuilder ivertexbuilder = material.getSprite()
+                .wrapBuffer(ItemRenderer.getBuffer(renderType, modelShield.getRenderType(material.getAtlasLocation()), false, stack.hasEffect()));
 
-            Minecraft.getInstance().getTextureManager().bindTexture(shield.resource);
+            modelShield.func_228294_b_()
+                .render(mat, ivertexbuilder, light, overlayLight, 1.0F, 1.0F, 1.0F, 1.0F);
 
-            //handle and shield parts
-            modelShield.func_228294_b_().
-                    render(mat, ivertexbuilder, x, y, 1F, 1F, 1F, 1F);
-            modelShield.func_228293_a_().
-                    render(mat, ivertexbuilder, x, y, 1F, 1F, 1F, 1F);
+            modelShield.func_228293_a_()
+                .render(mat, ivertexbuilder, light, overlayLight, 1.0F, 1.0F, 1.0F, 1.0F);
 
             mat.pop();
 
